# saas_management

./: .gitignore  LICENSE  Makefile  README.md  commit.sh
apps/docusaurus/: docusaurus.config.ts  pnpm-lock.yaml  sidebars_features.ts
apps/docusaurus/features/: intro.md
apps/saas_mngt_service/: .bazelignore  .bazelrc  .env.enc  .golangci.yml  BUILD.bazel  Dockerfile  MODULE.bazel  Makefile  buf.gen.yaml  buf.yaml  commit.sh  docker-compose.yml  git.sh  go.mod  go.sum  sqlc.yaml
apps/saas_mngt_service/cicd/: build_push.sh  build_push_with_remote_caching.sh  docker_build_push.sh
apps/saas_mngt_service/cmd/: BUILD.bazel  main.go
apps/saas_mngt_service/internal/core/: BUILD.bazel  README.md  cache.go  logger.go  pubsub.go  setting.go  transaction.go
apps/saas_mngt_service/internal/core/mock/: BUILD.bazel  cache_test.go  logger_test.go  pubsub_test.go
apps/saas_mngt_service/internal/domain/: BUILD.bazel  repository.go  shared.go  user.go
apps/saas_mngt_service/internal/domain/entity/: BUILD.bazel  attachment.go  custom_field.go  feature_flag.go  org_sync_template.go  org_user.go  organization.go  permission.go  project.go  refresh_token.go  role.go  role_permission.go  shared.go  user.go
apps/saas_mngt_service/internal/domain/repository/: BUILD.bazel  org_user.go  organization.go  project.go  refresh_token.go  user.go
apps/saas_mngt_service/internal/domain/repository/mock/: BUILD.bazel  org_user_test.go  organization_test.go  refresh_token_test.go  user_test.go
apps/saas_mngt_service/internal/infrastructures/postgres/: BUILD.bazel  README.MD  schema.sql  user.go
apps/saas_mngt_service/internal/infrastructures/postgres/dto/: BUILD.bazel  org_sync_template.go  org_user.go  organization.go  organization_membership.go  permission.go  project.go  refresh_token.go  role.go  role_permission.go  user.go
apps/saas_mngt_service/internal/infrastructures/postgres/sqlc/: BUILD.bazel  models.go  org_sync_template.sql.go  org_user.sql.go  organization.sql.go  organization_membership.sql.go  permission.sql.go  project.sql.go  querier.go  refresh_token.sql.go  role.sql.go  role_permission.sql.go  user.sql.go
apps/saas_mngt_service/internal/infrastructures/postgres/sqlc/mock/: querier_test.go
apps/saas_mngt_service/internal/infrastructures/redis/: BUILD.bazel  redis.go
apps/saas_mngt_service/internal/infrastructures/repository/sqlc/: models.go  user.sql.go
apps/saas_mngt_service/internal/infrastructures/viper/: BUILD.bazel  viper.go
apps/saas_mngt_service/internal/infrastructures/zap/: BUILD.bazel  zap.go
apps/saas_mngt_service/internal/libs/: README.md
apps/saas_mngt_service/internal/libs/redis/: BUILD.bazel  redis.go
apps/saas_mngt_service/internal/libs/ristretto/: BUILD.bazel
apps/saas_mngt_service/internal/libs/viper/: BUILD.bazel
apps/saas_mngt_service/internal/libs/zap/: BUILD.bazel  zap.go
apps/saas_mngt_service/internal/middleware/: BUILD.bazel
apps/saas_mngt_service/internal/subscribers/: README.md
apps/saas_mngt_service/internal/utils/dto/: user.go
apps/saas_mngt_service/internal/wire/: BUILD.bazel  wire.go  wire_gen.go
apps/saas_mngt_service/libs/redis/: BUILD.bazel
apps/saas_mngt_service/libs/ristretto/: BUILD.bazel  ristretto.go
apps/saas_mngt_service/libs/viper/: BUILD.bazel  viper.go
apps/saas_mngt_service/libs/zap/: BUILD.bazel
apps/saas_mngt_service/proto/saas/v1/: auth.proto  entity.proto  user.proto
apps/saas_mngt_service/scripts/: README.md  ad_hoc_add.sh  ad_hoc_down.sh  ad_hoc_up.sh  docker_test.sh  migration_add.sh  migration_down.sh  migration_fix.sh  migration_gen.sh  migration_hash.sh  migration_lint.sh  migration_rebase.sh  migration_remove.sh  migration_status.sh  migration_up.sh  schema_clean.sh  seed_add.sh  seed_down.sh  seed_up.sh
apps/saas_mngt_service/sql/: schema.sql
apps/saas_mngt_service/sql/migrations/: 00001_uuid_v7.sql  20250903114011_init.sql  20250903114420_optional_field.sql  20251109160428_init_user.sql  20251109160429_refresh_token.sql  20251110161112_organization.sql  20251110163234_org_user.sql  20251110163234_organization_membership.sql  20251110163234_organization_user.sql  20251110163234_user_org.sql  20251113015116_project.sql  20251113141353_permission.sql  20251115030604_org_sync_templates.sql  20251115040233_role.sql  20251115041507_role_permission.sql  atlas.sum
apps/saas_mngt_service/sql/queries/: org_sync_template.sql  org_user.sql  organization.sql  organization_membership.sql  permission.sql  project.sql  refresh_token.sql  role.sql  role_permission.sql  user.sql
apps/saas_mngt_service/wire/: BUILD.bazel  wire.go  wire_gen.go
cicd/: build.sh
environment/: README.md  docker-compose.yml
environment/bazel_remote/: htpasswd
environment/postgres_cluster/init/: 01-create-databases.sh  02-setup-extensions.sql  03-setup-timescaledb.sh
environment/prometheus/: prometheus.yml
secrets/: .gitignore  buf_token  sops_private_key.asc  sops_public_key
