load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "system",
    srcs = [
        "cache.go",
        "db.go",
        "logger.go",
        "pubsub.go",
        "setting.go",
        "transaction.go",
    ],
    importpath = "github.com/vtuanjs/saas_management/apps/saas_mngt_service/internal/core",
    visibility = ["//:__subpackages__"],
    deps = [
        "@com_github_vtuanjs_saas_management_packages_go//pkg/pkg_err",
        "@com_github_vtuanjs_saas_management_packages_go//pkg/pkg_must",
    ],
)
