load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "middleware",
    srcs = [
        "auth.go",
        "config_cors.go",
        "error_handler.go",
        "rate_limiter.go",
        "request_id.go",
        "secure_headers.go",
        "secure_logger.go",
    ],
    importpath = "github.com/vtuanjs/saas_management/apps/saas_mngt_service/internal/middleware",
    visibility = ["//:__subpackages__"],
)
