load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "ristretto",
    srcs = ["ristretto.go"],
    importpath = "github.com/vtuanjs/saas_management/apps/saas_mngt_service/libs/ristretto",
    visibility = ["//:__subpackages__"],
    deps = [
        "//internal/core:system",
        "@com_github_dgraph_io_ristretto//:ristretto",
        "@com_github_vtuanjs_saas_management_packages_go//pkg/pkg_err",
        "@com_github_vtuanjs_saas_management_packages_go//pkg/pkg_must",
    ],
)
