load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "repository",
    srcs = [
        "org_user.go",
        "organization.go",
        "project.go",
        "refresh_token.go",
        "user.go",
    ],
    importpath = "github.com/vtuanjs/saas_management/apps/saas_mngt_service/internal/domain/repository",
    visibility = ["//:__subpackages__"],
    deps = ["//internal/domain/entity"],
)
