load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "postgres",
    srcs = ["user.go"],
    importpath = "github.com/vtuanjs/saas_management/apps/saas_mngt_service/internal/infrastructures/postgres",
    visibility = ["//:__subpackages__"],
    deps = [
        "//internal/domain/entity",
        "//internal/domain/repository",
        "//internal/infrastructures/postgres/dto",
        "//internal/infrastructures/postgres/sqlc",
    ],
)
