load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "redis",
    srcs = ["redis.go"],
    importpath = "github.com/vtuanjs/saas_management/apps/saas_mngt_service/internal/infrastructures/redis",
    visibility = ["//:__subpackages__"],
    deps = [
        "//internal/core:system",
        "@com_github_bsm_redislock//:redislock",
        "@com_github_redis_go_redis_v9//:go-redis",
        "@com_github_vtuanjs_saas_management_packages_go//pkg/pkg_err",
        "@com_github_vtuanjs_saas_management_packages_go//pkg/pkg_must",
        "@com_github_vtuanjs_saas_management_packages_go//pkg/pkg_retry",
    ],
)
