load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "viper",
    srcs = ["viper.go"],
    importpath = "github.com/vtuanjs/saas_management/apps/saas_mngt_service/internal/infrastructures/viper",
    visibility = ["//visibility:public"],
    deps = [
        "//internal/core:system",
        "@com_github_spf13_viper//:viper",
    ],
)
