load("@io_bazel_rules_go//go:def.bzl", "go_test")

go_test(
    name = "mock_test",
    srcs = [
        "org_user_test.go",
        "organization_test.go",
        "refresh_token_test.go",
        "user_test.go",
    ],
    deps = [
        "//internal/domain/entity",
        "@org_uber_go_mock//gomock",
    ],
)
