load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "dto",
    srcs = [
        "org_sync_template.go",
        "org_user.go",
        "organization.go",
        "permission.go",
        "refresh_token.go",
        "role.go",
        "role_permission.go",
        "user.go",
    ],
    importpath = "github.com/vtuanjs/saas_management/apps/saas_mngt_service/internal/infrastructures/postgres/dto",
    visibility = ["//:__subpackages__"],
    deps = [
        "//internal/domain/entity",
        "//internal/infrastructures/postgres/sqlc",
        "@com_github_vtuanjs_saas_management_packages_go//pkg/pkg_err",
        "@com_github_vtuanjs_saas_management_packages_go//pkg/pkg_string",
    ],
)
