load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "sqlc",
    srcs = [
        "db.go",
        "models.go",
        "org_sync_template.sql.go",
        "org_user.sql.go",
        "organization.sql.go",
        "permission.sql.go",
        "querier.go",
        "refresh_token.sql.go",
        "role.sql.go",
        "role_permission.sql.go",
        "user.sql.go",
    ],
    importpath = "github.com/vtuanjs/saas_management/apps/saas_mngt_service/internal/infrastructures/postgres/sqlc",
    visibility = ["//:__subpackages__"],
    deps = [
        "@com_github_jackc_pgx_v5//:pgx",
        "@com_github_jackc_pgx_v5//pgconn",
    ],
)
